• Fixed title spacing in post

--- a/wp-content/themes/essay/scss/post.scss
+++ b/wp-content/themes/essay/scss/post.scss
@@ -111,7 +111,8 @@ article {
       font-size: 5em;
     }
     h1 {
-      margin: 0.75em 0;
+      margin: 0.75em 0 0.25em 0;
+
     }
   }
 }
